# Doomed

./: .gitignore  CMakeLists.txt  README.md  vcpkg_response_file.txt
docs/: milestone_1.pptx  proposal.md
include/core/: app.h  app_camera.h  camera.h  input_dispatcher.h  logger.h
include/global/: config.h
include/gui/: gui.h
include/logging/: logger.h
include/renderer/: app_default_renderer.h  app_deferred_renderer.h  app_deferred_shader.h  app_g_buffer.h  app_renderer.h  app_shader.h  drawable.h  mesh.h  model.h  model_loader.h  point_light.h  shadow_map.h  texture_loader.h
include/world/: maze.h  maze_node.h  portal.h
resources/models/debug/: house.mtl
resources/models/node1/: blender.mtl
resources/shaders/: default.frag  default.vert  deferred_dir_light.frag  deferred_dir_light.vert  deferred_geometry.frag  deferred_geometry.vert  deferred_geometry_portal.frag  deferred_geometry_portal.vert  deferred_point_light.frag  deferred_point_light.vert  null_pass.vert  null_pass_set_depth.frag  null_pass_set_depth.vert  shadow_map.frag  shadow_map.geom  shadow_map.vert  simple.frag  simple.vert
source/: main.cpp
source/core/: app.cpp  app_camera.cpp  camera.cpp  input_dispatcher.cpp  logger.cpp
source/gui/: gui.cpp
source/logging/: logger.cpp
source/renderer/: app_default_renderer.cpp  app_deferred_renderer.cpp  app_deferred_shader.cpp  app_g_buffer.cpp  app_renderer.cpp  app_shader.cpp  mesh.cpp  model.cpp  model_loader.cpp  point_light.cpp  shadow_map.cpp  texture_loader.cpp
source/world/: maze.cpp  maze_node.cpp  portal.cpp
